# ya_web3_proxy

./: .gitignore  Cargo.toml  deploy.sh  test.bat
deployment/: ya_web3_proxy.sevice
frontend/: README.md  package.json  vite.config.ts
frontend/public/: config.json
frontend/src/: ConfigProvider.tsx  Dashboard.tsx  Endpoints.tsx  LatestCalls.css  LatestCalls.tsx  Monitor.css  Monitor.tsx  SingleCallInfo.tsx  WelcomePage.css  WelcomePage.tsx  index.css  main.tsx
src/: frontend.rs  main.rs  problems.rs
src/error/: bag.rs  mod.rs
