[workspace.package]
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.1.4"
edition = "2021"
license = "MIT"

[[bin]]
name = "ya_web3_proxy"

[package]
name = "ya_web3_proxy"
description = "Simple proxy for web3 for listing latest web3 traffic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.21", features = ["full"] }
sha3 = "0.10"
lazy_static = "1.4"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rustc-hex = "2.1"
structopt = "0.3"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.26", features = ["serde-arbitrary-precision"] }
toml = "0.7"
actix-web = { version = "4.3", default-features = false, features = ["macros"] }
actix-cors = "0.6"
actix-files = "0.6"
rust-embed = "6.4"
serde_json = { version = "1.0" }
uuid = { version = "1.2", features = ["serde", "v4"] }
awc = { version = "3.0", features = ["rustls"] }
base64 = "0.21"
mime_guess = "2.0"

[dependencies]
tokio = { workspace = true }
sha3 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
rustc-hex = { workspace = true }
structopt = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust-embed = { workspace = true }
toml = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
awc = { workspace = true }
base64 = { workspace = true }
mime_guess = { workspace = true }